{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "cdfcea52-33bb-4bff-b2f5-1f00fd4a8480",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "0945186d-3bdd-4b96-9711-157cf9ec1846",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseMovement",
                    "type": "PassThrough",
                    "id": "d6e79578-a52c-4084-bd7b-bb765adc55f3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UIMousePosition",
                    "type": "PassThrough",
                    "id": "6366dee4-75d2-4e52-8e1d-6c716d60bc60",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "PassThrough",
                    "id": "4a38a506-e01d-4ed3-a18a-5324de733108",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "FirstInteraction",
                    "type": "Button",
                    "id": "a6c57c7a-b87f-4a00-adef-a925029d134a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "SecondInteraction",
                    "type": "Button",
                    "id": "2e120b5f-2fca-410c-b77e-282920a19e33",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "18f0b889-e68d-4685-9347-dc6927f60100",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8dc61054-edec-46f4-aed0-4212f4acea41",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0606fbdf-3437-4e9c-ba8a-cf54c450f957",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "fba5fa81-f3fd-4795-900b-f829d07d1318",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "45b9f322-42b7-4c8d-8749-6f82d06eb6e3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "bc88ab7e-b278-45cb-a2da-102104c46202",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ac3df5a-2007-4211-b793-40367a1a3acb",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UIMousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b059757a-fb9f-43b0-a35c-6bb054bc0877",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9d78003-122c-47f7-b154-ef2b25cb32d9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstInteraction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9d5d467-d53b-46b3-997a-1d32bc74eb1e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondInteraction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}